--- a/powerbi-docs/guided-learning/TOC.yml
+++ b/powerbi-docs/guided-learning/TOC.yml
@@ -1,4 +1,4 @@
-- name: Explorar o Power BI (consumidor)
+- name: Explorar o Power BI (../consumidor)
   href: 'https://docs.microsoft.com/learn/modules/explore-power-bi-service'
 - name: Analisar dados no Power BI (consumidor)
   href: 'https://docs.microsoft.com/learn/modules/analyze-data-power-bi'
