--- a/powerbi-docs/create-reports/TOC.yml
+++ b/powerbi-docs/create-reports/TOC.yml
@@ -339,6 +339,8 @@
               href: ../paginated-reports/report-builder-shared-datasets.md
             - name: Criar parâmetros
               href: ../paginated-reports/paginated-reports-parameters.md
+            - name: Definir exibições do relatório
+              href: ../paginated-reports/page-view.md
             - name: Sub-relatórios
               href: ../paginated-reports/subreports.md
             - name: Solucionar problemas de sub-relatórios
