--- a/powerbi-docs/developer/visuals/TOC.yml
+++ b/powerbi-docs/developer/visuals/TOC.yml
@@ -44,7 +44,7 @@
           href: advanced-edit-mode.md
         - name: Recurso supportsKeyboardFocus
           href: supportskeyboardfocus-feature.md
-        - name: supportsMultiVisualSelection-feature.md
+        - name: Recurso supportsMultiVisualSelection
           href: supportsmultivisualselection-feature.md
     - name: Como
       items:
