--- a/powerbi-docs/learning-catalog/TOC.yml
+++ b/powerbi-docs/learning-catalog/TOC.yml
@@ -7,6 +7,8 @@
       href: learning-catalog-consumer.md
     - name: Criadores de relatório
       href: learning-catalog-report-creator.md
+    - name: 'Curso online: Relatórios paginados'
+      href: paginated-reports-online-course.md
     - name: Analistas de dados
       href: learning-catalog-data-analyst.md
     - name: Administradores
