commit translated contents

--- a/powerbi-docs/connect-data/TOC.yml
+++ b/powerbi-docs/connect-data/TOC.yml
@@ -208,6 +208,8 @@
               href: refresh-data.md
             - name: Configurar a atualização agendada
               href: refresh-scheduled-refresh.md
+            - name: Centro de atualização
+              href: refresh-center.md
             - name: Configurar a atualização incremental
               href: ../admin/service-premium-incremental-refresh.md
             - name: Atualizar um conjunto de dados de um arquivo local do Power BI Desktop
@@ -266,6 +268,8 @@
               href: service-connect-to-microsoft-sustainability-calculator.md
             - name: Office365Mon
               href: service-connect-to-office365mon.md
+            - name: Métricas de capacidade do Power BI Premium
+              href: service-connect-to-pbi-premium-capacity-metrics.md
             - name: Projeto Online
               href: service-connect-to-project-online.md
             - name: QuickBooks Online
