--- a/powerbi-docs/create-reports/index.yml
+++ b/powerbi-docs/create-reports/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 03/30/2020
-  ms.openlocfilehash: 4c8b301e95dddbfc80f1a4b3c4a7a464da267dfc
-  ms.sourcegitcommit: 0e9e211082eca7fd939803e0cd9c6b114af2f90a
+  ms.openlocfilehash: 2c70b084c2b4f5af8a71dd6004b742402800f77c
+  ms.sourcegitcommit: a72567f26c1653c25f7730fab6210cd011343707
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 05/13/2020
-  ms.locfileid: "83275974"
+  ms.lasthandoff: 05/19/2020
+  ms.locfileid: "83564003"
 landingContent:
 - title: Introdução
   linkLists:
@@ -93,6 +93,10 @@ landingContent:
       url: ../paginated-reports/paginated-reports-report-builder-power-bi.md
     - text: Construtor de Relatórios no Power BI
       url: ../paginated-reports/report-builder-power-bi.md
+  - linkListType: learn
+    links:
+    - text: 'Curso online: Relatórios paginados em um dia'
+      url: ../learning-catalog/paginated-reports-online-course.md
   - linkListType: concept
     links:
     - text: Exemplos de expressões
