--- a/powerbi-docs/create-reports/TOC.yml
+++ b/powerbi-docs/create-reports/TOC.yml
@@ -257,7 +257,7 @@
               href: ../visuals/power-bi-visualization-card.md
             - name: Gráficos de combinação
               href: ../visuals/power-bi-visualization-combo-chart.md
-            - name: Visuais da árvore hierárquica (versão prévia)
+            - name: Visuais da árvore hierárquica
               href: ../visuals/power-bi-visualization-decomposition-tree.md
             - name: Gráficos de rosca
               href: ../visuals/power-bi-visualization-doughnut-charts.md
