commit translated contents

--- a/powerbi-docs/developer/embedded/TOC.yml
+++ b/powerbi-docs/developer/embedded/TOC.yml
@@ -94,6 +94,8 @@
           href: 'https://go.microsoft.com/fwlink/?linkid=848274'
         - name: Inserir layouts personalizados em um aplicativo
           href: embedded-custom-layout.md
+        - name: CLI do Azure
+          href: /cli/azure/ext/powerbidedicated/powerbi
     - name: Recursos
       items:
         - name: Central de desenvolvedores
