--- a/powerbi-docs/learning-catalog/index.yml
+++ b/powerbi-docs/learning-catalog/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: loreleishannonmsft
   ms.author: v-lshann
   ms.date: 04/08/2020
-  ms.openlocfilehash: 9f03f812eb20454f655a876438312ba50b521a29
-  ms.sourcegitcommit: 7aa0136f93f88516f97ddd8031ccac5d07863b92
+  ms.openlocfilehash: c53b6e74933557937f4a9449925199d6325f78e3
+  ms.sourcegitcommit: aece2382b618dc5b730705b4c76e76a657986588
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 05/05/2020
-  ms.locfileid: "81439286"
+  ms.lasthandoff: 06/04/2020
+  ms.locfileid: "84427820"
 landingContent:
 - title: Tomadores de decisão de negócios
   linkLists:
@@ -36,9 +36,9 @@ landingContent:
       url: learning-catalog-report-creator.md#
     - text: Introdução
       url: learning-catalog-report-creator.md#get-started
-    - text: Painéis
+    - text: Dashboards
       url: learning-catalog-report-creator.md#dashboards
-    - text: Design de relatórios
+    - text: Design de relatório
       url: learning-catalog-report-creator.md#report-design
     - text: Visualização
       url: learning-catalog-report-creator.md#visualization
@@ -56,10 +56,12 @@ landingContent:
       url: learning-catalog-data-analyst.md#best-practices
     - text: Estudos de caso
       url: learning-catalog-data-analyst.md#case-studies
-    - text: Painéis
+    - text: Dashboards
       url: learning-catalog-data-analyst.md#dashboards
     - text: Visualizações
       url: learning-catalog-data-analyst.md#visualizations
+    - text: DAX
+      url: learning-catalog-data-analyst.md#dax
     - text: Governança e implantação
       url: learning-catalog-data-analyst.md#governance-deployment
     - text: Integração
@@ -84,10 +86,8 @@ landingContent:
       url: learning-catalog-developer.md
     - text: Introdução
       url: learning-catalog-developer.md#get-started
-    - text: Inserida
+    - text: Inserido
       url: learning-catalog-developer.md#embedded
-    - text: DAX
-      url: learning-catalog-developer.md#dax
     - text: Desenvolvimento
       url: learning-catalog-developer.md#development
 - title: Funções de pré-vendas de parceiros
@@ -108,7 +108,7 @@ landingContent:
       url: learning-catalog-functional-consultant.md#best-practices
     - text: Estudos de caso
       url: learning-catalog-functional-consultant.md#case-studies
-    - text: Painéis
+    - text: Dashboards
       url: learning-catalog-functional-consultant.md#dashboards
     - text: Governança e implantação
       url: learning-catalog-functional-consultant.md#governance-deployment
