commit translated contents

--- a/powerbi-docs/learning-catalog/TOC.yml
+++ b/powerbi-docs/learning-catalog/TOC.yml
@@ -15,6 +15,8 @@
       href: learning-catalog-administrator.md
     - name: Desenvolvedores
       href: learning-catalog-developer.md
+    - name: 'Curso online: Power BI Embedded'
+      href: developer-online-course.md
     - name: Funções de pré-vendas de parceiro
       href: learning-catalog-presales.md
     - name: Consultores funcionais
