commit translated contents

--- a/powerbi-docs/guided-learning/index.yml
+++ b/powerbi-docs/guided-learning/index.yml
@@ -6,12 +6,12 @@ metadata:
   ms.service: powerbi
   ms.author: davidiseminger
   ms.date: 09/20/2019
-  ms.openlocfilehash: bd094c8a4568c7fb05ca49996fb0c8f409c668d3
-  ms.sourcegitcommit: 7aa0136f93f88516f97ddd8031ccac5d07863b92
+  ms.openlocfilehash: e358b7b78b4c87b500e6d749bee39fcdc9b2fd02
+  ms.sourcegitcommit: 66b1a0c74b8a7dcb33a2f8570fb67bce2401a895
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 05/05/2020
-  ms.locfileid: "74178319"
+  ms.lasthandoff: 06/08/2020
+  ms.locfileid: "84532593"
 title: Aprendizagem interativa do Microsoft Power BI
 summary: Comece sua jornada de aprendizagem com esta coleção sequenciada de cursos e entenda os recursos extensos e poderosos do Microsoft Power BI.
 landingContent:
@@ -83,7 +83,7 @@ landingContent:
       url: https://docs.microsoft.com/learn/modules/model-data-power-bi/3-create-calculated-columns
     - text: Otimizar modelos de dados – 8 min
       url: https://docs.microsoft.com/learn/modules/model-data-power-bi/4-optimize-data-models
-    - text: Criar medidas calculadas – 15 min
+    - text: Criar medidas – 15 min
       url: https://docs.microsoft.com/learn/modules/model-data-power-bi/4b-create-calculated-measures
     - text: Criar tabelas calculadas – 4 min
       url: https://docs.microsoft.com/learn/modules/model-data-power-bi/5-create-calculated-tables
