--- a/powerbi-docs/consumer/TOC.yml
+++ b/powerbi-docs/consumer/TOC.yml
@@ -132,7 +132,7 @@
               href: end-user-app-view.md
             - name: Conectar aos serviços
               href: end-user-connect-to-services.md
-            - name: Obter um aplicativo de exemplo do AppSource
+            - name: Obter um aplicativo de exemplo do marketplace de aplicativos
               href: end-user-app-marketing.md
         - name: Fazer perguntas sobre seus dados
           items:
