--- a/powerbi-docs/developer/embedded/TOC.yml
+++ b/powerbi-docs/developer/embedded/TOC.yml
@@ -18,6 +18,8 @@
           href: embed-sample-for-your-organization.md
         - name: Inserir relatórios paginados para clientes
           href: embed-paginated-reports-customers.md
+        - name: Inserir relatórios paginados para sua organização
+          href: embed-paginated-reports-organization.md
         - name: Inserir conteúdo para nuvens nacionais
           href: embed-sample-for-customers-national-clouds.md
     - name: Conceitos
