--- a/powerbi-docs/guidance/TOC.yml
+++ b/powerbi-docs/guidance/TOC.yml
@@ -66,6 +66,8 @@
               href: dax-column-measure-references.md
             - name: Evite usar FILTER como argumento de filtro
               href: dax-avoid-avoid-filter-as-filter-argument.md
+            - name: Modelo de exemplo
+              href: dax-sample-model.md
         - name: Relatórios do Power BI
           items:
             - name: Separar relatórios de modelos
