--- a/powerbi-docs/guided-learning/index.yml
+++ b/powerbi-docs/guided-learning/index.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Landing
 metadata:
-  title: Aprendizagem interativa do Microsoft Power BI
+  title: Aprendizagem individual do Microsoft Power BI
   description: Comece sua jornada de aprendizagem com esta coleção sequenciada de cursos e entenda os recursos extensos e poderosos do Microsoft Power BI.
   layout: LandingPage
   ms.service: powerbi
   ms.author: davidiseminger
-  ms.date: 09/20/2019
-  ms.openlocfilehash: e358b7b78b4c87b500e6d749bee39fcdc9b2fd02
-  ms.sourcegitcommit: 66b1a0c74b8a7dcb33a2f8570fb67bce2401a895
+  ms.date: 06/23/2020
+  ms.openlocfilehash: 05fa98c9c2c2aa242f8068ee1792eef87638aec0
+  ms.sourcegitcommit: 7d7bb755d5a5af30d2b0eab89fb56e4498514890
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 06/08/2020
-  ms.locfileid: "84532593"
-title: Aprendizagem interativa do Microsoft Power BI
+  ms.lasthandoff: 07/02/2020
+  ms.locfileid: "85836914"
+title: Aprendizagem individual do Microsoft Power BI
 summary: Comece sua jornada de aprendizagem com esta coleção sequenciada de cursos e entenda os recursos extensos e poderosos do Microsoft Power BI.
 landingContent:
 - title: Explorar o que o Power BI pode fazer por você
